# MultipleChoiceQuiz

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
flaskr/: __init__.py  api.py  database.py  logic.py  web.py
flaskr/create_questions/: example.py
flaskr/static/css/: styles.css
flaskr/templates/: answer-list.html  answer-solution-list.html  index.html  question.html
