[project]
name = "MultipleChoiceQuiz"
version = "0.2.7"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "Flask==3.1.0",
    "Flask-WTF==1.2.2",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "packaging==24.2",
    "Werkzeug==3.1.3",
    "WTForms==3.2.1",
]

requires-python = ">= 3.8"
readme = "README.md"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.setuptools.packages.find]
exclude = ["node_modules*"]
